# sureshot-algo-signals

./: .gitignore  Backtest_README.md  IncredibleLeverageSPXL.py  TODOs.md  backtest.py  backtest_portfolio_IL_efficientfrontier.py  main.py  nasdaqlisted.txt  next.md  optimization_backtest.py  otherlisted.txt  pull_candles.py  quick_summary.md  requirements.txt  test_sma.py
SureshotSDK/: ATR.py  BacktestEngine.py  BacktestRunner.py  BacktestingPriceCache.py  IntradayDataManager.py  Portfolio.py  PortfolioBacktestEngine.py  SMA.py  Scheduler.py  TradingStrategy.py  __init__.py  add_datetime_to_cache.py  index.py  requirements-test.txt  requirements.txt  setup.py  utils.py
automation/: EfficientFrontier.yaml  README.md  pyproject.toml  requirements-vault.txt  setup.py
automation/IncredibleLeverageAVL/: Dockerfile
automation/IncredibleLeverageHOOD/: Dockerfile
automation/IncredibleLeverageSPXL/: Dockerfile  main.py  requirements.txt
automation/SureshotSDK/: PortfolioStrategy.py  SMA.py  Scheduler.py  __init__.py  pytest.ini  setup.py  utils.py  vault_client.py
automation/SureshotSDK/Polygon/: client.py
automation/SureshotSDK/tests/: README.md  conftest.py  test_portfolio.py  test_sma.py
automation/sureshot_automation.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
live_trading_infrastructure/: README.md  Sealed_Secret_Auto_unseal.md  claude_instructions.md  vault-values.yaml
optimization/: evaluate.py
portfolio_IL_efficientfrontier/: EfficientFrontier.yaml  README.md  deploy.sh  test_efficientfrontier_api.py
portfolio_multi_strategy/: README.md  (+1 more)
(+126 files in other folders)
