[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sureshot-automation"
version = "0.1.0"
description = "Sureshot algorithmic trading automation suite"
requires-python = ">=3.8"
dependencies = [
    "pytz>=2021.1",
    "requests>=2.25.0",
    "typing-extensions>=4.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["SureshotSDK*"]